@@ -11,6 +11,7 @@ Plugin.define do
                "auto_indenter",     ">0",
                "document_search",   ">0",
                "runnables",         ">0",
+               "sessions",          ">0",
                "HTML View",         ">=0.3.2",
                "Plugin Manager UI", ">=0.3.2"
 end
