@@ -1,0 +1,8 @@
+
+Plugin.define do
+  name    "sessions"
+  version "1.0"
+  file    "lib", "sessions"
+  object  "Sessions"
+  dependencies "project", ">0"
+end
